<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RouteLocationFragment">

    <vn.map4d.map.core.MFMapView
        android:id="@+id/mapViewRoute"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/ic_dry_clean" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/ic_more_to" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/ic_destination" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="7"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <EditText
                            android:id="@+id/edt_origin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/your_location"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/edt_destination"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/destination"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardView_Car"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="10dp"
                            app:strokeColor="@color/blue_300"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_car_surveillance" />

                                <TextView
                                    android:id="@+id/txt_car"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="1dp"
                                    android:gravity="center"
                                    android:text="Ô tô"
                                    android:textStyle="bold"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardView_Motor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            app:cardCornerRadius="10dp"
                            app:strokeColor="@color/blue_300"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_motorbike" />

                                <TextView
                                    android:id="@+id/txt_motor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="1dp"
                                    android:gravity="center"
                                    android:text="Xe máy"
                                    android:textStyle="bold"
                                    android:textColor="@color/black"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardView_Walk"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardCornerRadius="10dp"
                            app:strokeColor="@color/blue_300"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_pedestrian_crossing" />

                                <TextView
                                    android:id="@+id/txt_walk"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="1dp"
                                    android:gravity="center"
                                    android:text="Đi bộ"
                                    android:textStyle="bold"
                                    android:textColor="@color/black"
                                    android:textSize="15sp" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btn_start"
                        style="@style/ButtonLocationRoute"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:background="@drawable/background_start"
                        android:text="Tìm"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_timer" />

                        <TextView
                            android:id="@+id/txt_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="-----:-----"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_distance" />

                        <TextView
                            android:id="@+id/txt_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:gravity="center"
                            android:text="------ Km"
                            android:textColor="@color/black"
                            android:textSize="18sp" />
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="bottom|center"
            android:textColor="@color/white"
            android:layout_marginBottom="100dp"
            android:background="@drawable/background_start"
            android:text="@string/choose" />

        <Button
            android:id="@+id/btn_mode"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="80dp"
            android:padding="9dp"
            android:text="2D"
            android:textColor="@color/white"
            android:background="@drawable/background_button_round"
            android:layout_gravity="bottom|right"
            android:layout_width="43dp"
            android:layout_height="43dp"/>

    </vn.map4d.map.core.MFMapView>

</RelativeLayout>